syntax = "proto3";

package relationship.v1;

service BlockService {
  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse);
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse);
  rpc ListBlocked(ListBlockedRequest) returns (ListBlockedResponse);
  rpc GetBlockStatus(GetBlockStatusRequest) returns (GetBlockStatusResponse);
  rpc ListBlockedBy(ListBlockedByRequest) returns (ListBlockedByResponse);
}

message BlockedUser {
  string id = 1;
  string user_type = 2; // "guest" or "cast"
  string name = 3;
  string image_url = 4;
  string blocked_at = 5; // ISO8601
}

message BlockUserRequest {
  string blocked_id = 1;
  string blocked_type = 2; // "guest" or "cast"
  string blocker_type = 3; // "guest" or "cast" (optional, specifies which profile is blocking)
}

message BlockUserResponse {
  bool success = 1;
}

message UnblockUserRequest {
  string blocked_id = 1;
}

message UnblockUserResponse {
  bool success = 1;
}

message ListBlockedRequest {
  int32 limit = 1;   // default: 50, max: 100
  string cursor = 2; // optional, for pagination
}

message ListBlockedResponse {
  repeated BlockedUser users = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetBlockStatusRequest {
  repeated string user_ids = 1;
}

message GetBlockStatusResponse {
  map<string, bool> blocked = 1; // user_id -> is_blocked
}

message ListBlockedByRequest {
  string target_id = 1;  // Guest profile ID
}

message ListBlockedByResponse {
  repeated BlockedUser blockers = 1;  // Casts who blocked this guest
}
